<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.theleafapps.pro.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/cafe" />

    <TextView
        android:id="@+id/business_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="11dp"
        android:fontFamily="sans-serif-light"
        android:paddingStart="24dp"
        android:text="@string/business_name"
        android:textColor="@android:color/white"
        android:textSize="40sp" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp">

        <TextView
            android:id="@+id/address_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginTop="24dp"
            android:textSize="16sp"
            android:paddingEnd="16dp"
            android:paddingStart="24dp"
            android:text="@string/address" />

        <TextView
            android:id="@+id/hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/address_label"
            android:textSize="16sp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/hours" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/hours"
            android:layout_below="@+id/hours"
            android:layout_marginTop="16dp"
            android:text="@string/phone"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/phone"
            android:layout_below="@+id/phone"
            android:layout_marginTop="17dp"
            android:text="@string/description"
            android:paddingEnd="16dp"
            android:textSize="16sp" />
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>
</RelativeLayout>
